    the inlining page.
  * Fix comments testsuite to not rely on Date::Parse's ability to
    parse the date Columbus discovered America. Closes: #640350
  * Avoid warning message when generating setup file if highlight
    is not installed. Closes: #637606
  * Promote RPC::XML to a Recommends, since it's used by auto-blog.setup.
    Closes: #637603

 -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 11:22:52 -0400

ikiwiki (3.20110715) unstable; urgency=low

  * rename: Fix logic error that broke renaming pages when the attachment
    plugin was disabled.
  * rename: Fix logic error that bypassed the usual pagespec checks.

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Jul 2011 18:36:29 -0400

ikiwiki (3.20110712) unstable; urgency=low

  * attachment: Bugfix to create directory when moving attachment out of 
    holding area.
  * Display attachment manipulation links always, since attachments can be
    uploaded via javascript.

 -- Joey Hess <joeyh@debian.org>  Tue, 12 Jul 2011 00:41:26 -0400

ikiwiki (3.20110711) unstable; urgency=low

  * Add build dep on python-support. Closes: #633536
  * attachment: Bugfix to move upload attachments out of holding area
    when saving.
  * attachment: Bugfix for trying to attach files to a subpage of the index
    page.

 -- Joey Hess <joeyh@debian.org>  Mon, 11 Jul 2011 13:03:04 -0400

ikiwiki (3.20110707) unstable; urgency=low

  * userlist: New plugin, lets admins see a list of users and their info.
  * aggregate: Improve checking for too long aggregated filenames.
  * Updated to jQuery 1.6.1.
  * attachment: Speed up multiple file uploads by storing uploaded files
    in a staging area until the page is saved/previewed, rather than
    refreshing the site after each upload.
    (Sponsored by The TOVA Company.)
  * attachment: Files can be dragged into the edit page to upload them.
    Multiple file batch upload support. Upload progress bars.
    AJAX special effects. Impemented using the jQuery-File-Upload widget.