@@ -29,6 +29,7 @@ ikiwiki (3.20110716) UNRELEASED; urgency=low
     is not installed. Closes: #637606
   * Promote RPC::XML to a Recommends, since it's used by auto-blog.setup.
     Closes: #637603
+  * Fix web revert of a file deletion.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 11:22:52 -0400
 
